syntax="proto3";

option java_package="top.neospot.cloud.api.model";

service Greeter {
    rpc SayHello( HelloRequest) returns ( HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message=1;
}

